...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nutrientNEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                            android:maxEms="2"
                            android:minEms="1"
                            android:text="80"
                            android:imeOptions="actionDone"
                            android:textStyle="bold"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nutrientPEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                            android:minEms="1"
                            android:minLines="1"
                            android:text="30"
                            android:textColor="@color/text_color"
                            android:textColorHint="@color/hint_text"
...
                        app:hintTextAppearance="@style/TextInputLayoutHint"
                        app:hintTextColor="@color/logo_tint"
                        app:layout_constraintEnd_toStartOf="@+id/btnReset"
                        app:layout_constraintTop_toBottomOf="@id/selectNutrient">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nutrientKEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                            android:minEms="1"
                            android:minLines="1"
                            android:text="40"
                            android:textColor="@color/text_color"
                            android:textColorHint="@color/hint_text"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fieldAreaEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/btnCalculating"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...

                <RelativeLayout
                    android:id="@+id/resultLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/txtUrea"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/txtDAP"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/txtMOP"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
