...
                            app:layout_constraintStart_toEndOf="@id/btnDecrease"
                            app:suffixText="ha"
                            app:suffixTextAppearance="@style/SuffixTextAppearance"
                            app:suffixTextColor="@color/text_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fieldAreaEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone"
                                android:inputType="number|numberDecimal"
                                android:maxEms="4"
                                android:maxLines="1"
...
                            android:textSize="17sp"
                            style="@style/Widget.App.RadioButton"
                            android:checked="true" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/btnCalculating"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="32dp"
                        android:backgroundTint="@color/button_bg"
...
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/txtAmountPest"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"/>

                            <TextView
                                android:id="@+id/txtTotalAmount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="25 liters"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintTop_toBottomOf="@+id/textTotalAmount"
...
